Menu header listo

--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
     <!-- Fonte del Proyecto Raleway -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <title> Mi Portafolio</title>
+
+    <!-- Boostrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- estilos -->
+    <link rel="stylesheet" href="./assets/css/menu.css">
 </head>
 <body>
     <!-- Sección del Menú  -->
-    <div class="tudo">
+    <div class="tudo col-12">
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
             <h3 class="menu__title">Jaime Moncayo</h3>
         </header>
-        <nav>
-            <ul class="menu__list">
+        <nav class="menu__nav ">
+            <ul class="menu__list ">
                 <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
                 <li class="menu__list__item"><a href="#skills">Skills</a></li>
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
@@ -29,7 +37,6 @@
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
                 <li class="menu__list__item"><a href="#contacto">jmoncayoparra@gmail.com</a></li>
             </ul>
-            <li class="menu__list__item__contato"><a href="#contacto">jmoncayoparra@gmail.com</a></li>
         </nav>
     </section>
 
