--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- estilos -->
     <link rel="stylesheet" href="./assets/css/menu.css">
+    <link rel="stylesheet" href="./assets/css/title.css">
 </head>
 <body>
     <!-- Sección del Menú  -->
@@ -43,18 +44,21 @@
     <!-- Sección del Header/Title/Hero -->
     <section class="title">
         <div class="title__div">
-            <img class="title__profile jaimeFoto" src="./assets/images/perfilJaime.jpg">
             <div class="title__container">
                 <h2 class="title__bio">Hola, mi nombre es Jaime Moncayo y construyo paginas web</h2>
                 <h3 class="title__subsection">soy formado en ... Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, incidunt? Velit similique sapiente placeat quibusdam accusantium cupiditate tempora expedita cumque perspiciatis explicabo! Necessitatibus consectetur suscipit inventore, esse nobis distinctio quia.</h3>
                 <ul class="title__network">
-                     <!-- Pon los enlaces de tus redes sociales favoritas -->
+                    <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="https://github.com/jaime1315321">Github <img src="assets\arrow.png"> </a></li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/jaime-andres-moncayo-parra/">Linkedin <img src="assets\arrow.png"></a></li>
                     <li class="title__network__item"><a href="https://www.instagram.com/pazjaimeandres/">Instagram <img src="assets\arrow.png"></a></li>
                     <li class="title__network__item"><a href="https://drive.google.com/file/d/1q_phyFzaFJG1I3j1iq5gm8D-lDiW_kQX/view?usp=sharing">Currículo <img src="assets\arrow.png"></a></li>
                 </ul>
             </div>
+            <div class="title__imagen">
+                <div class=" title__imagen--jaime"></div>
+            </div>
+            <!-- <img class="title__profile jaimeFoto" src="./assets/images/perfilJaime.jpg"> -->
         </div>
     </section>
     
