--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- estilos -->
     <link rel="stylesheet" href="./assets/css/menu.css">
     <link rel="stylesheet" href="./assets/css/title.css">
+    <link rel="stylesheet" href="./assets/css/about.css">
 </head>
 <body>
     <!-- Sección del Menú  -->
@@ -40,7 +41,7 @@
             </ul>
         </nav>
     </section>
-
+    
     <!-- Sección del Header/Title/Hero -->
     <section class="title">
         <div class="title__div">
