--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="./assets/css/title.css">
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/skills.css">
+    <link rel="stylesheet" href="./assets/css/hobbies.css">
+    <link rel="stylesheet" href="./assets/css/formacion.css">
 </head>
 <body>
     <!-- Sección del Menú  -->
@@ -129,45 +131,33 @@
         <h3 class="hobbies__title">Hobbies</h3>
             <div class="hobbies__line">
                 <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"><img src="assets\skate_icon.png"></li>
+                        <li class="hobbies__img"><img class="hobbies__img--hockey" src="assets\skate_icon.png"></li>
                         <li class="hobbies__name"> Hockey</li>
-                    </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
+                        <li class="hobbies__img"> <img class="hobbies__img--guitarra" src="assets\guitar_icon.png" alt=""></li>
                         <li class="hobbies__name">Tocar guitarra</li>
-                    </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt=""></li>
+                        <li class="hobbies__img"> <img class="hobbies__img--musica" src="assets\headphones_icon.png" alt=""></li>
                         <li class="hobbies__name">Oir música</li>
-                    </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"><img src="assets\tv_icon.png" alt=""></li>
+                        <li class="hobbies__img"><img class="hobbies__img--series" src="assets\tv_icon.png" alt=""></li>
                         <li class="hobbies__name">Ver séries</li>
-                    </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\forkspoon_icon.png" alt=""> </li>
+                        <li class="hobbies__img"> <img class="hobbies__img--cocinar" src="assets\forkspoon_icon.png" alt=""> </li>
                         <li class="hobbies__name">Cocinar</li>
-                    </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\camera_icon.png" alt=""> </li>
+                        <li class="hobbies__img"> <img class="hobbies__img--fotos" src="assets\camera_icon.png" alt=""> </li>
                         <li class="hobbies__name">Tomar fotos</li>
-                    </ul>
                 </div>
         </div>
     </section>
@@ -177,36 +167,44 @@
         <h2 class="academic__title" >Formación académica</h2>
         <div class="academic__courses">
             <div class="academic__courses__box">
-                <ul class="academic__courses__list">
+                <div class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img "><img src="assets/images/unal.png" class="unal"></li>
+                    <li class="academic__courses__item__img">
+                        <img src="assets/images/2023unal.png" class="img_unal">
+                    </li>
                     <li class="academic__courses__item__title"><h4>Ingeniero Mecánico</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2021 - Universidad Nacional de Colombia - Sede Medellín</p></li>
-                </ul>
+                    <li class="academic__courses__item__subtitle"><p>2021</p></li>
+                </div>
             </div>
             <div class="academic__courses__box">
-                <ul class="academic__courses__list">
+                <div class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets/images/digitalHouse.png " class="itm"></li>
+                    <li class="academic__courses__item__img">
+                        <img src="assets/images/digitalHouse.png " class="img_digital">
+                    </li>
                     <li class="academic__courses__item__title"><h4>Desarrollador web Front End</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2022</p></li>
-                </ul>
+                </div>
             </div>
             <div class="academic__courses__box">
-                <ul class="academic__courses__list">
+                <div class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\alura_logo.png"></li>
+                    <li class="academic__courses__item__img">
+                        <img src="assets\alura_logo.png"  class="img_alura">
+                    </li>
                     <li class="academic__courses__item__title"><h4>Formación en UX Design</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2023 - Alura</p></li>
-                </ul>
+                    <li class="academic__courses__item__subtitle"><p>2023</p></li>
+                </div>
             </div>
             <div class="academic__courses__box">
-                <ul class="academic__courses__list">
+                <div class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets/images/itm.png " class="itm"></li>
+                    <li class="academic__courses__item__img">
+                        <img src="assets/images/itm.png " class="img_itm">
+                    </li>
                     <li class="academic__courses__item__title"><h4>Ingenriería Mecatrónica</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>En curso - UFRJ</p></li>
-                </ul>
+                    <li class="academic__courses__item__subtitle"><p>En curso</p></li>
+                </div>
             </div>
         </div>
     </section>
