--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/css/skills.css">
     <link rel="stylesheet" href="./assets/css/hobbies.css">
     <link rel="stylesheet" href="./assets/css/formacion.css">
+    <link rel="stylesheet" href="./assets/css/experiencia.css">
 </head>
 <body>
     <!-- Sección del Menú  -->
@@ -211,61 +212,58 @@
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
-        <h2 class="experience__section__title" >Experiencia Profissional</h2>
-        <div class="experiencie__box">
+        <h2 class="experience__section__title" >Experiencia Professional</h2>
+        
+        <div class="experiencie__box ">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\decod_print.png">
-            <div class="experience__info"
+            <div class="experiencie__box__img">
+                <img class="experience__img" src="assets/images/encriptador.svg">
+            </div>
+            <div class="experience__info">
                 <h2 class="experience__title">Encriptador de texto</h2>
                 <h3 class="experience__text">Challenge Alura Codificador </h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo">
+                                <a href="https://github.com/alura-challenges/challenge-one-encriptador-latam">
+                                    <button class="experiencia__botao--repo">Repositório</button>
+                                </a>
+                            </span>
+                            <span class="experience__demo">
+                                <a href="#dilbani">
+                                    <button class="experience__botao--demo">Ver demo</button>
+                                </a>
+                            </span>
                     </div>
             </div>
         </div>  
 
-        <div class="experiencie__box">
+        <div class="experiencie__box experiencie__box--juego">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\forca_print.png">
-            <div class="experience__info"
+          
+            <div class="experience__info">
                 <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
                 <h3 class="experience__text">Challenge Oracle </h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo">
+                                <a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado">
+                                    <button class="experiencia__botao--repo">Repositório</button>
+                                </a>
+                            </span>
+                            <span class="experience__demo">
+                                <a href="">
+                                    <button class="experience__botao--demo">Ver demo</button>
+                                </a>
+                            </span>
                     </div>
+            </div>
+            <div class="experiencie__box__img">
+                <img class="experience__img" src="assets/images/juego.svg">
             </div>
         </div>  
 
-        <div class="experience__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\secretcode_print.png">
-            <div class="experience__info-container"
-                <h2 class="experience__title">Encriptador de texto</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
-            </div>
-        </div>  
-
-        <div class="experience__box">
-            <img class="experience__img" src="assets\forca2_print.png">
-            <div class="experience__info-container"
-            <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
-        </div>
-        </div>  
+    </section>
 
         <!-- Sección de Contacto -->
         <section class="formcontato" id="contacto">
@@ -274,7 +272,7 @@
                     <img class="formcontato__img" src="assets\contact_image.png">
                 </div>
                 <div class="formcontato__text">
-                    <h2 class="formcontato__title">Contacto</h2>
+                    <h2 id="dilbani" class="formcontato__title">Contacto</h2>
                     <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
                     <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
                     <form class="formcontato__form" name="form">
