--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./assets/css/formacion.css">
     <link rel="stylesheet" href="./assets/css/experiencia.css">
     <link rel="stylesheet" href="./assets/css/contacto.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
     <!-- Sección del Menú  -->
@@ -345,6 +346,7 @@
         <section class="footer">
             <div class="footer__rodape">
                 <p>Desarrollado por Jaime Andrés Moncayo Parra</p>
+                <br>
                 <p>2023</p>
             </div>
         </section>
