--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <!-- Sección del Menú  -->
-    <div class="tudo col-12">
+    <div class="tudo ">
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
@@ -56,7 +56,11 @@
                 <h3 class="title__subsection">soy formado en ... Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, incidunt? Velit similique sapiente placeat quibusdam accusantium cupiditate tempora expedita cumque perspiciatis explicabo! Necessitatibus consectetur suscipit inventore, esse nobis distinctio quia.</h3>
                 <ul class="title__network">
                     <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="https://github.com/jaime1315321">Github <img src="assets\arrow.png"> </a></li>
+                    <li class="title__network__item">
+                        <a href="https://github.com/jaime1315321">Github 
+                            <img src="assets\arrow.png"> 
+                        </a>
+                    </li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/jaime-andres-moncayo-parra/">Linkedin <img src="assets\arrow.png"></a></li>
                     <li class="title__network__item"><a href="https://www.instagram.com/pazjaimeandres/">Instagram <img src="assets\arrow.png"></a></li>
                     <li class="title__network__item"><a href="https://drive.google.com/file/d/1q_phyFzaFJG1I3j1iq5gm8D-lDiW_kQX/view?usp=sharing">Currículo <img src="assets\arrow.png"></a></li>
