maquetación final-puliendo mucho mas

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="experiencie__box__img">
                 <img class="experience__img" src="assets/images/encriptador.svg">
             </div>
-            <div class="experience__info">
+            <div class="experience__info experience__info--estilo">
                 <h2 class="experience__title">Encriptador de texto</h2>
                 <h3 class="experience__text">Challenge Alura Codificador </h3>
                     <div class="experience__description">
