--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="title__div">
             <div class="title__container">
                 <h2 class="title__bio">Hola, mi nombre es Jaime Moncayo y construyo paginas web</h2>
-                <h3 class="title__subsection">soy formado en ... Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, incidunt? Velit similique sapiente placeat quibusdam accusantium cupiditate tempora expedita cumque perspiciatis explicabo! Necessitatibus consectetur suscipit inventore, esse nobis distinctio quia.</h3>
+                <h3 class="title__subsection">Soy formado en la macro Universidad Colombiana en el área de ingeniería, no fue fácil entrar, tampoco salir graduado, pero lo verdaderamente interesante lo empecé a vivir hace 1 año y medio, decidí apostar a mis sueños,  intentando dar un paso a la vez, confío en mis instintos, ya faltando 1 semestre para terminar mi segunda carrera, me siento orgulloso de apostarle a mi camino, el camino como desarrollador Front End! amo mis dos ingenierías y confío en que ambos conocimientos los puedo explotar al máximo con esta diciplina!.... Así que, vamos con toda!</h3>
                 <ul class="title__network">
                     <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item">
